--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "@aux4/",
+  "name": "@aux4/test",
   "version": "0.0.1",
-  "description": "",
+  "description": "Test aux4",
   "main": "index.js",
   "preferGlobal": true,
   "bin": {
-    "aux4-": "bin/executable.js"
+    "aux4-test": "bin/executable.js"
   },
   "scripts": {
     "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/aux4/template.git"
+    "url": "git+ssh://git@github.com/aux4/test.git"
   },
   "keywords": [
     "aux4",
-    "cli"
+    "cli",
+    "test"
   ],
   "author": "Aux4 Team",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/aux4/template/issues"
+    "url": "https://github.com/aux4/test/issues"
   },
   "homepage": "https://aux4.io",
   "funding": "https://aux4.io/donate",
   "dependencies": {
     "@aux4/config": "^1.0.2",
     "@aux4/engine": "^1.0.31",
-    "@aux4/input": "^0.0.3"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0"
+    "@aux4/input": "^0.0.3",
+    "colors": "^1.4.0",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0"
   }
 }
