--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@aux4/engine": "^1.0.31",
     "@aux4/input": "^0.0.3",
     "colors": "^1.4.0",
-    "jest": "^29.7.0",
-    "jest-cli": "^29.7.0"
+    "jest": "^29.7.0"
   }
 }
