--- a/package.json
+++ b/package.json
@@ -32,5 +32,11 @@
     "@aux4/input": "^0.0.3",
     "colors": "^1.4.0",
     "jest": "^29.7.0"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [],
+    "haste" : {
+      "retainAllFiles": true
+    }
   }
 }
