--- a/package.json
+++ b/package.json
@@ -28,15 +28,11 @@
   "funding": "https://aux4.io/donate",
   "dependencies": {
     "@aux4/config": "^1.0.2",
-    "@aux4/engine": "^1.0.31",
+    "@aux4/engine": "^1.0.34",
     "@aux4/input": "^0.0.3",
     "colors": "^1.4.0",
-    "jest": "^29.7.0"
-  },
-  "jest": {
-    "testPathIgnorePatterns": [],
-    "haste": {
-      "retainAllFiles": true
-    }
+    "jest": "^29.7.0",
+    "nyc": "^15.1.0",
+    "strip-color": "^0.1.0"
   }
 }
