--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
     "jest": "^29.7.0",
     "nyc": "^15.1.0",
     "strip-color": "^0.1.0"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [],
+    "haste" : {
+      "retainAllFiles": true
+    }
   }
 }
