--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+**/node_modules/
 jspm_packages/
 
 # Typescript v1 declaration files
@@ -64,5 +64,7 @@ typings/
 build
 
 local-test
+package/lib
 
 .DS_Store
+*.zip
