--- a/package.json
+++ b/package.json
@@ -27,16 +27,13 @@
   "homepage": "https://aux4.io",
   "funding": "https://aux4.io/donate",
   "dependencies": {
-    "@aux4/engine": "^1.0.62",
     "colors": "^1.4.0",
-    "jest": "^29.7.0",
-    "nyc": "^15.1.0",
     "strip-color": "^0.1.0"
   },
-  "jest": {
-    "testPathIgnorePatterns": [],
-    "haste": {
-      "retainAllFiles": true
-    }
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "rollup-plugin-preserve-shebang": "^1.0.1",
+    "vite": "^6.3.3"
   }
 }
